2011-08-20  David S. Miller  <davem@davemloft.net>

	* Makefile (tst-cleanup0.out): Fix typo in output redirection.

2011-08-14  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/i386/pthreaddef.h (TCB_ALIGNMENT): Set to 64, optimal on Atom.
	* sysdeps/x86_64/pthreaddef.h (TCB_ALIGNMENT): Likewise.

2011-08-08  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/cancellation.S: Maintain aligned
	stack.
	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S: Likewise.

2011-07-22  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/pthread/unwind-forcedunwind.c (_Unwind_Resume): Add read
	barrier.
	(__gcc_personality_v0): Likewise.
	(_Unwind_ForcedUnwind): Likewise.
	(_Unwind_GetCFA): Likewise.

2011-07-14  Roland McGrath  <roland@hack.frob.com>

	* allocatestack.c (__reclaim_stacks): Use uintptr_t cast rather than
	UINTMAX_C.

2011-06-30  Ulrich Drepper  <drepper@gmail.com>

	* nptl-init.c (__nptl_set_robust): New function.
	(pthread_functions): Add reference.
	* npthreadP.h: Declare __nptl_set_robust.
	* sysdeps/pthread/pthread-functions.h (pthread_functions): Add
	ptr_set_robust member.
	* sysdeps/unix/sysv/linux/fork.c: Call set_robust_list syscall in
	child if threads are used.

2011-06-14  Andreas Jaeger  <aj@suse.de>

	* pthread_rwlock_init.c: Include <string.h> for memset declaration.

2011-05-11  Ulrich Drepper  <drepper@gmail.com>

	[BZ #386]
	* allocatestack.c (allocate_stack): Convert ENOMEM error to EAGAIN.

2011-04-10  Ulrich Drepper  <drepper@gmail.com>

	[BZ #12650]
	* allocatestack.c (get_cached_stack): Deallocate DTV entries before
	clearing memory.
	Patch partly by Robert Rex <robert.rex@exasol.com>.

2011-01-19  Roland McGrath  <roland@redhat.com>

	* pthread_cond_wait.c (__pthread_cond_wait): Fix comment typo.
	* pthread_cond_timedwait.c (__pthread_cond_timedwait): Likewise.
	* pthread_rwlock_rdlock.c (__pthread_rwlock_rdlock): Likewise.